--- a/hands-on/GrandmaAuthLib/GrandmaAuthLib.csproj
+++ b/hands-on/GrandmaAuthLib/GrandmaAuthLib.csproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.10" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.10" />
     </ItemGroup>
