--- a/hands-on/ExampleOAuthClient/ExampleOAuthClient.csproj
+++ b/hands-on/ExampleOAuthClient/ExampleOAuthClient.csproj
@@ -2,12 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <RootNamespace>OAuthServer</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\OAuth\Callback.cshtml" />
     </ItemGroup>
 
 </Project>
