--- a/hands-on/IdentityService/IdentityService.csproj
+++ b/hands-on/IdentityService/IdentityService.csproj
@@ -6,6 +6,9 @@
 
     <ItemGroup>
       <PackageReference Include="IdentityServer4" Version="4.1.1" />
+      <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.10" />
     </ItemGroup>
 
 </Project>
