--- a/hands-on/SecuredJsWebApp/SecuredJsWebApp.csproj
+++ b/hands-on/SecuredJsWebApp/SecuredJsWebApp.csproj
@@ -8,4 +8,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\vendors" />
+    </ItemGroup>
+
 </Project>
