--- a/hands-on/IdentityService/IdentityService.csproj
+++ b/hands-on/IdentityService/IdentityService.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="IdentityServer4" Version="4.1.1" />
       <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.10" />
     </ItemGroup>
 
     <ItemGroup>
